5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4172/executions/1582_1559.log
== TEST (2019-03-13 21:53:31) 
-- CODE:
frase = print("Ada Lovelace foi a primeira programadora da historia.".upper())
print(frase.???)
-- ERROR:
File "XXXX", line 2
    print(frase.???)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 21:54:21) 
-- CODE:
frase = print(.upper("Ada Lovelace foi a primeira programadora da historia."))
print(frase.???)
-- ERROR:
File "XXXX", line 1
    frase = print(.upper("Ada Lovelace foi a primeira programadora da historia."))
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 21:56:21) 
-- CODE:
frase = print("Ada Lovelace foi a primeira programadora da historia..upper())
				  print(frase.???)
-- ERROR:
File "XXXX", line 1
    frase = print("Ada Lovelace foi a primeira programadora da historia..upper())
                                                                                ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 21:56:21) 
-- CODE:
frase = print("Ada Lovelace foi a primeira programadora da historia..upper())
				  print(frase.???)
-- ERROR:
File "XXXX", line 1
    frase = print("Ada Lovelace foi a primeira programadora da historia..upper())
                                                                                ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 21:56:21) 
-- CODE:
frase = print("Ada Lovelace foi a primeira programadora da historia..upper())
				  print(frase.???)
-- ERROR:
File "XXXX", line 1
    frase = print("Ada Lovelace foi a primeira programadora da historia..upper())
                                                                                ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 21:56:37) 
-- CODE:
frase = print("Ada Lovelace foi a primeira programadora da historia..upper()¨)
				  print(frase.???)
-- ERROR:
File "XXXX", line 1
    frase = print("Ada Lovelace foi a primeira programadora da historia..upper()¨)
                                                                                  ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 21:57:33) 
-- CODE:
frase = print("Ada Lovelace foi a primeira programadora da historia..upper())
				  print(frase.???)
-- ERROR:
File "XXXX", line 1
    frase = print("Ada Lovelace foi a primeira programadora da historia..upper())
                                                                                ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 21:57:37) 
-- CODE:
frase = print("Ada Lovelace foi a primeira programadora da historia..upper()")
				  print(frase.???)
-- ERROR:
File "XXXX", line 2
    print(frase.???)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 21:58:06) 
-- CODE:
frase = print("Ada Lovelace foi a primeira programadora da historia..upper()")
				  print(frase.???)
-- ERROR:
File "XXXX", line 2
    print(frase.???)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 21:58:48) 
-- CODE:
frase = print("Ada Lovelace foi a primeira programadora da historia.upper()")
				  print(frase.???)
-- ERROR:
File "XXXX", line 2
    print(frase.???)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 21:59:18) 
-- CODE:
frase = print("Ada Lovelace foi a primeira programadora da historia.upper()")
				 
-- OUTPUT:
Ada Lovelace foi a primeira programadora da historia.upper()
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 21:59:57) 
-- CODE:
frase = print("Ada Lovelace foi a primeira programadora da historia.".upper())
				 
-- OUTPUT:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 22:00:05) 
-- CODE:
frase = print("Ada Lovelace foi a primeira programadora da historia.".upper())
				 
-- EXECUTION TIME:
0.134514
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 12:43:27) 
-- CODE:
frase = print("Ada Lovelace foi a primeira programadora da historia.".upper())
				 
-- OUTPUT:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
